--- a/style.css
+++ b/style.css
@@ -2497,6 +2497,7 @@ textarea {
         left: 50%;
         transform: translateX(-50%);
         z-index: 1000;
+        margin-left: 0px;
     }
 
     .button-container button{
@@ -2910,10 +2911,11 @@ textarea {
     }
 
     .section-5 a{
-        margin-top: 32px;
+        margin-top: 28px;
         width: 60%;
         transform: translateX(-50%);
         margin-left: 50%;
+        font-size: 15px;
     }
 
 
@@ -2923,7 +2925,7 @@ textarea {
 
     .section-5-cards{
         flex-direction: column;
-        padding-top: 28px;
+        padding-top: 24px;
         gap: 6px;
     }
 
@@ -2993,11 +2995,12 @@ textarea {
     .section-7{
         flex-direction: column-reverse;
         margin-top: 48px;
+        height: auto;
     }
 
     .section-7 .button-container{
         bottom: inherit;
-        margin-top: 318px;
+        /* margin-top: 318px; */
         padding: 0px;
     }
 
@@ -3025,6 +3028,7 @@ textarea {
         font-size: 16px;
         text-align: center;
         padding-left: 0px;
+        padding-top: 22px;
     }
 
     .section-7 span{
