--- a/style.css
+++ b/style.css
@@ -3111,7 +3111,7 @@ textarea {
     }
 
     footer .menu a{
-        padding: 8px 0px 8px 4px !important;
+        padding: 8px 0px 8px 8px !important;
         font-family: "Bold";
         font-size: 24px;
     }
@@ -3122,6 +3122,7 @@ textarea {
 
     .footer-row-2{
         flex-direction: column;
+        margin-left: 8px;
     }
 
     .footer-row-2 ul{
