--- a/style.css
+++ b/style.css
@@ -2286,6 +2286,7 @@ textarea {
 
     .sticky-cta{
         transform: scale(0.9);
+
     }
 
     .z-index{
@@ -2297,7 +2298,7 @@ textarea {
 
 }
 
-@media only screen and (max-width: 1190px) and (min-width: 880px) {
+@media only screen and (max-width: 1250px) and (min-width: 880px) {
 
     .info-left{
         width: 50vw!important;
@@ -2308,11 +2309,20 @@ textarea {
     }
 
     .hero-left{
-        padding-left: 4vw;
+        padding-left: 5vw;
     }
 
     .section-7 h2{
         font-size: 48px;
+    }
+
+    footer{
+        width: 90vw;
+    }
+
+    header{
+        padding-left: 5vw !important;
+        padding-right: 5vw !important;
     }
 
 }
