--- a/calendar.css
+++ b/calendar.css
@@ -70,7 +70,7 @@
 .flatpickr-calendar.noCalendar.hasTime .flatpickr-time{
     height:auto
 }
-.flatpickr-calendar:before,.flatpickr-calendar:after{
+/*.flatpickr-calendar:before,.flatpickr-calendar:after{
     position:absolute;
     display:block;
     pointer-events:none;
@@ -79,7 +79,7 @@
     height:14px;
     width:28px;
     left:22px
-}
+}*/
 .flatpickr-calendar.rightMost:before,.flatpickr-calendar.arrowRight:before,.flatpickr-calendar.rightMost:after,.flatpickr-calendar.arrowRight:after{
     left:auto;
     right:22px
