--- a/style.css
+++ b/style.css
@@ -1192,9 +1192,9 @@ body{
 .modal-content {
   display: flex;
   flex-direction: column;
-  background: white;
+  background: #f5f5f5;
   border-radius: 20px;
-  width: 55vw;
+  width: 71vw;
   height: 97vh;
   overflow: hidden; /* Ensures rounded corners are respected */
   position: relative;
@@ -1205,12 +1205,13 @@ body{
   width: 100%;
   height: auto;
   display: block;
-  border-radius: 20px 20px 0 0; /* Matches parent border-radius */
+  border-radius: 20px 0px 0px 20px; /* Matches parent border-radius */
   margin: 0;
   padding: 0;
 }
 
 .scroll-container {
+    display: flex;
   width: 100%;
   height: 100%;
   overflow-y: auto; /* Allows vertical scrolling */
@@ -1222,7 +1223,12 @@ body{
 }
 
 .modal-content img{
-    width: 100%;
+    z-index: 1;
+    width: 28vw;
+    height: 97vh;
+    object-fit: cover;
+    object-position: -333px;
+    position: fixed;
 }
 
 .modal-content h3{
@@ -1232,12 +1238,13 @@ body{
 .close img{
     width: 20px;
     height: 20px;
+    object-position: 0px;
 }
 
 .close-container{
     display: flex;
     justify-content: flex-end;
-    width: 55vw;
+    width: 71vw;
     padding: 12px;
     position: fixed;
     z-index: 1000;
@@ -1257,7 +1264,7 @@ body{
     cursor: pointer;
     overflow: hidden;
     border-radius: 99px;
-    background-color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(255, 255, 255, 1);
     backdrop-filter: blur(24px);
     -webkit-backdrop-filter: blur(24px);
 
@@ -1265,6 +1272,7 @@ body{
 
 .close:hover{
     background-color: rgba(255, 255, 255, 1);
+    cursor: pointer;
 }
 
 body.modal-open {
@@ -1415,6 +1423,7 @@ body {
 .form-post-container{
     display: flex;
     flex-direction: column;
+
 }
 
 .package-content li{
@@ -1747,13 +1756,13 @@ textarea {
 .form-cta{
     display: flex;
     justify-content: center;
-    width: 55vw;
+    width: 43vw;
     padding: 12px;
     background-color: white;
     position: fixed;
     z-index: 998;
     bottom: 1.5vh;
-    margin-left: -4vw;
+    margin-left: -7vw;
     border-radius: 0px 0px 20px 20px;
 }
 
@@ -1837,9 +1846,26 @@ textarea {
 
 .form-container {
     background-color: #F5F5F5;
-    padding: 4vw;
+    padding-top: 4vw;
+    padding-bottom: 4vw;
+    padding-left: 7vw !important;
+    padding-right: 7vw ;
     border-radius: 10px;
-    width: 55vw;
+    width: 43vw;
+    margin-left: 28vw;
+    padding-left: 16px;
+    display: flex;
+    flex-direction: column;
+    height: 240%;
+}
+
+.form-container h3{
+    font-size: 44px;
+    letter-spacing: 2%;
+    line-height: 1.1;
+    font-family: "Black";
+    text-align: center;
+    margin-bottom: 40px;
 }
 
 .form-container h4{
@@ -1859,6 +1885,9 @@ textarea {
     letter-spacing: 2%;
     text-transform: uppercase;
     color: #2C2E2C;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 24px;
 }
 
 .form-header p {
