--- a/style.css
+++ b/style.css
@@ -1549,10 +1549,17 @@ textarea {
     background-image: url("img/plus.svg") !important;
 }
 
-/* Package Selection */
 .packages {
   display: flex;
-  gap: 20px;
+  flex-direction: column;
+  gap: 12px;
+  justify-content: center;
+  align-items: stretch;
+}
+.package-row{
+    display: flex;
+    gap: 12px;
+    width: 100%;
 }
 
 .package {
@@ -1572,12 +1579,7 @@ textarea {
 /* Card hover start */
 
 /* General styles for the packages container */
-.packages {
-  display: flex;
-  gap: 20px;
-  justify-content: center;
-  align-items: stretch;
-}
+
 
 /* Individual package styling */
 .package {
@@ -1755,6 +1757,8 @@ textarea {
 
 .form-cta{
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     width: 43vw;
     padding: 12px;
@@ -1764,7 +1768,25 @@ textarea {
     bottom: 1.5vh;
     margin-left: -7vw;
     border-radius: 0px 0px 20px 20px;
+    box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.06);
+    z-index: 2000;
 }
+
+.form-cta button{
+    width: 43%;
+}
+
+.form-cta span{
+    font-family: "Medium";
+    font-size: 13px;
+    line-height: 1.2;
+    color: #4A4C49;
+    letter-spacing: 0.1px;
+    margin-top: 8px;
+    margin-bottom: 2px;
+
+}
+
 
 
 /* Form end */
@@ -1844,16 +1866,15 @@ textarea {
     font-family: Arial, sans-serif;
 }
 
-.form-container {
+.form-container{
     background-color: #F5F5F5;
     padding-top: 4vw;
     padding-bottom: 4vw;
-    padding-left: 7vw !important;
-    padding-right: 7vw ;
+    padding-left: 7vw;
+    padding-right: 7vw;
     border-radius: 10px;
     width: 43vw;
     margin-left: 28vw;
-    padding-left: 16px;
     display: flex;
     flex-direction: column;
     height: 240%;
@@ -1887,7 +1908,21 @@ textarea {
     color: #2C2E2C;
     width: 100%;
     text-align: center;
-    margin-bottom: 24px;
+    margin-bottom: 28px;
+}
+
+.sub{
+    margin-bottom: 6px !important;
+}
+
+.form-sub{
+    font-family: "Regular";
+    font-size: 17px;
+    line-height: 1.3;
+    letter-spacing: 2%;
+    color: #545654;
+    text-align: center;
+    margin-bottom: 28px;
 }
 
 .form-header p {
@@ -1902,6 +1937,8 @@ textarea {
     justify-content: space-around;
     margin-bottom: 30px;
 }
+
+
 
 .package {
     border-radius: 10px;
@@ -1985,7 +2022,7 @@ textarea {
 
 textarea {
     resize: none;
-    height: 80px;
+    height: 240px;
 }
 
 .submit-button {
@@ -2325,7 +2362,34 @@ textarea {
 
 
 
+
+
 }
+
+@media only screen and (max-width: 1388px) and (min-width: 880px) {
+
+    .modal-content{
+        width: 89vw;
+    }
+
+    .form-container{
+        width: 61vw;
+        padding-left: 9vw !important;
+        padding-right: 9vw;
+    }
+
+    .form-cta{
+        width: 61vw;
+        margin-left: -9vw;
+    }
+
+    .close-container{
+        width: 89vw;
+    }
+
+
+}
+
 
 @media only screen and (max-width: 1250px) and (min-width: 880px) {
 
@@ -2353,6 +2417,9 @@ textarea {
         padding-left: 5vw !important;
         padding-right: 5vw !important;
     }
+
+
+
 
 }
 
