--- a/style.css
+++ b/style.css
@@ -2479,6 +2479,23 @@ textarea {
         border-radius: 0px;
     }
 
+    .close-container{
+        width: 95vw;
+    }
+
+    .package-row{
+        flex-direction: column;
+    }
+
+    .package{
+        width: 100%;
+    }
+
+    .form-container{
+        padding-left: 4vw !important;
+        padding-right: 4vw;
+    }
+
     .scroll-container{
         flex-direction: column;
 
@@ -2496,7 +2513,12 @@ textarea {
     }
 
     .form-cta{
-        width: 95vw;
+        width: 100vw;
+        margin-left: -4vw;
+    }
+
+    .form-cta button{
+        width: 80%;
     }
 
     /*.form-container h3{
