--- a/style.css
+++ b/style.css
@@ -1038,6 +1038,7 @@ button:active{
 }
 
 .button-container{
+    display: flex;
     margin-top: 82px;
     margin-left: -4px;
     z-index: 1;
@@ -1267,7 +1268,7 @@ body{
     background-color: rgba(255, 255, 255, 1);
     backdrop-filter: blur(24px);
     -webkit-backdrop-filter: blur(24px);
-
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
 }
 
 .close:hover{
@@ -1433,6 +1434,8 @@ body {
     line-height: 1.6;
     letter-spacing: 1%;
     text-align: left;
+    display: flex;
+    gap: 10px;
 }
 
 .input-container input,
@@ -1556,6 +1559,14 @@ textarea {
   justify-content: center;
   align-items: stretch;
 }
+
+.package-icon{
+    height: inherit !important;
+    width: inherit !important;
+    object-position: 0px !important;
+    position: relative !important;
+}
+
 .package-row{
     display: flex;
     gap: 12px;
@@ -1606,7 +1617,7 @@ textarea {
 }
 
 .package .price {
-    font-size: 15px;
+    font-size: 14px;
     line-height: 1.3;
     letter-spacing: 2%;
     font-family: "Bold";
@@ -1622,6 +1633,12 @@ textarea {
 .package:hover {
   opacity: 1 !important; /* Ensure hovered package stays fully visible */
   transform: scale(1.05); /* Optional: Slightly enlarge the hovered package */
+}
+
+/* Shrink non-hovered packages */
+.packages:hover .package:not(:hover) {
+  transform: scale(0.95); /* Shrink non-hovered cards */
+  opacity: 0.8; /* Optional: Dim non-hovered cards */
 }
 
 /* Circle styling */
@@ -1751,6 +1768,15 @@ textarea {
   position: relative;
   display: flex;
   align-items: center;
+}
+
+.package-content span{
+    font-family: "Bold";
+    font-size: 14px;
+    line-height: 1.3;
+    letter-spacing: 2%;
+    color: #616260;
+    text-align: left;
 }
 
 .price {
@@ -1927,7 +1953,7 @@ textarea {
     line-height: 1.1;
     font-family: "Black";
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 8px;
 }
 
 .form-container h4{
@@ -1950,6 +1976,7 @@ textarea {
     width: 100%;
     text-align: center;
     margin-bottom: 28px;
+    margin-top: 40px;
 }
 
 .sub{
@@ -1963,13 +1990,18 @@ textarea {
     letter-spacing: 2%;
     color: #545654;
     text-align: center;
-    margin-bottom: 28px;
+    margin-bottom: 24px;
 }
 
 .form-header p {
     font-size: 1.2em;
     color: #555;
     margin-bottom: 20px;
+}
+
+.form-row{
+    display: flex;
+    gap: 12px;
 }
 
 .package-options {
@@ -2000,9 +2032,9 @@ textarea {
 }
 
 .package h3 {
-    font-size: 22px;
-    line-height: 1.3;
-    margin-top: 60px;
+    font-size: 22px !important;
+    line-height: 1.3 !important;
+    margin-top: 32px;
     font-family: "Black";
     margin-bottom: 4px;
     color: #2C2E2C;
@@ -2010,7 +2042,7 @@ textarea {
 
 .package ul {
     list-style-type: none;
-    margin: 10px 0;
+    margin: 18px 0;
     padding: 0;
     color: #666;
 }
@@ -2521,11 +2553,15 @@ textarea {
         width: 80%;
     }
 
-    /*.form-container h3{
+    .form-container h3{
         font-size: 32px;
         line-height: 1.1;
         letter-spacing: 2%;
-    }*/
+    }
+
+    .package{
+        max-height: 108px !important;
+    }
 
 
 }    
@@ -2790,8 +2826,9 @@ textarea {
         height: inherit;
     }
 
-    .button-container button:nth-child(1){
+    .button-container a{
         width: 178px;
+        margin-right: 12px;
     }
 
     .info-left{
@@ -3377,6 +3414,11 @@ textarea {
 
     .faq-container{
         padding: 2vw 2vw 12vw 2vw !important;
+    }
+
+    .form-row{
+        display: flex;
+        flex-direction: column;
     }
 
 }
