--- a/style.css
+++ b/style.css
@@ -3442,6 +3442,7 @@ textarea {
         background-color: rgba(255, 255, 255, 0.5);
         backdrop-filter: blur(24px);
         -webkit-backdrop-filter: blur(24px);
+        padding: 8px !important;
     }
 
     .form-head{
