--- a/style.css
+++ b/style.css
@@ -3455,7 +3455,7 @@ textarea {
     }
 
     .form-container{
-        padding-bottom: 32vw;
+        padding-bottom: 110px;
     }
 
     .modal-content-mobile{
