--- a/style.css
+++ b/style.css
@@ -1215,6 +1215,12 @@ body{
   padding: 0;
 }
 
+.form-cover-mobile{
+    border-radius: 0px;
+    height: 170px;
+    object-fit: cover;
+}
+
 .scroll-container {
     display: flex;
   width: 100%;
@@ -1824,6 +1830,20 @@ textarea {
   border-radius: 4px;
   font-size: 1rem;
   width: 60%;
+}
+
+
+.group-size::after {
+    position: absolute;
+    content: "";
+    width: 21px;
+    height: 2px;
+    background-color: #D9D9D9;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 40px;
+    border-radius: 99px;
+
 }
 
 .form-cta{
