--- a/style.css
+++ b/style.css
@@ -3492,6 +3492,40 @@ textarea {
         /*fill: #2A2E28 !important;*/
     }
 
+    .package-content span{
+        display: none;
+    }
+
+    .package-left{
+        padding: 14px 14px 14px 16px;
+    }
+
+    .package-left h3{
+        font-size: 20px !important;
+        margin-top: 0px;
+    }
+
+    .package ul{
+        margin-top: 7px;
+        margin-bottom: 0px;
+    }
+
+    .price{
+        width: 92px;
+        text-transform: uppercase;
+        font-size: 12px !important;
+        line-height: 1.3;
+        color: #4A4C49 !important;
+        text-align: right !important;
+        position: absolute;
+        right: 16px;
+        bottom: 17px;
+    }
+
+    .package-content li{
+        line-height: 1.3;
+    }
+
 
 }
 
