--- a/style.css
+++ b/style.css
@@ -3492,7 +3492,7 @@ textarea {
         /*fill: #2A2E28 !important;*/
     }
 
-    .package-content span{
+    .package-span{
         display: none;
     }
 
