--- a/style.css
+++ b/style.css
@@ -677,6 +677,12 @@ footer path{
     margin-top: 40px;
 }
 
+
+.bespoke{
+    margin-top: 12px;
+    margin-bottom: 19px;
+}
+
 .faq-question .line-seperator{ 
     max-width: 75%;
 }
@@ -1591,6 +1597,7 @@ textarea {
   transition: box-shadow 0.3s;
   background-color: #fff;
   text-align: center;
+  max-height: 226px;
 }
 
 .package:hover {
@@ -3311,6 +3318,7 @@ textarea {
         max-width: 97%;
     }
 
+
     .faq-question h5{
         font-size: 19px;
     }
@@ -3524,9 +3532,19 @@ textarea {
 
     .package-content li{
         line-height: 1.3;
+        align-items: center;
     }
 
 
+}
+
+.grayed-out-month .flatpickr-day {
+    opacity: 1;
+    pointer-events: none;
+}
+
+.grayed-out-month .flatpickr-day:hover {
+    background-color: transparent !important;
 }
 
 
