--- a/style.css
+++ b/style.css
@@ -1074,7 +1074,7 @@ button:active{
 .custom-show{
     display: flex !important;
     max-width: 266px !important;
-    margin-top: 4px;
+    margin-top: 12px;
 }
 
 .custom-show{
@@ -1831,6 +1831,7 @@ textarea {
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
+    height: 100%;
     padding: 8px 20px 28px 20px;
 }
 
@@ -1851,6 +1852,7 @@ textarea {
 }
 
 .package-content {
+    height: 100%;
   position: relative;
   display: flex;
   align-items: center;
@@ -1868,6 +1870,11 @@ textarea {
 .price {
   margin-top: 10px;
   color: #333;
+}
+
+.price-bespoke{
+    position: absolute;
+    bottom: 28px;
 }
 
 /* Group Size Counter */
