--- a/style.css
+++ b/style.css
@@ -3768,6 +3768,10 @@ textarea {
         margin-bottom: 24px;
     }
 
+    .GIT-Headline{
+        font-size: 36px !important;
+    }
+
 }
 
 .grayed-out-month .flatpickr-day {
