--- a/style.css
+++ b/style.css
@@ -2097,16 +2097,16 @@ textarea {
 
 
 .form-head{
-    font-family: "Black";
-    font-size: 16px;
-    line-height: 1.2;
-    letter-spacing: 2%;
+    font-family: "Black" !important;
+    font-size: 16px !important;
+    line-height: 1.2 !important;
+    letter-spacing: 2% !important;
     text-transform: uppercase;
     color: #2C2E2C;
     width: 100%;
     text-align: center;
-    margin-bottom: 28px;
-    margin-top: 40px;
+    margin-bottom: 28px !important;
+    margin-top: 40px !important;
 }
 
 .sub{
