--- a/style.css
+++ b/style.css
@@ -374,6 +374,36 @@ h1{
     margin-top: 36px !important;
 }
 
+.day-tour-h1{
+    font-size: 64px !important;
+}
+
+.day-tour-h2{
+    font-family: "bold";
+    font-size: 22px;
+    max-width: 390px;
+    line-height: 1.3;
+}
+
+.day-tours-included-container{
+    display: flex;
+    flex-direction: column;
+    margin-top: 48px;
+    gap: 6px;
+}
+
+.day-tour-included{
+    display: flex;
+    gap: 10px;
+}
+
+.day-tour-included p{
+    font-family: "Medium";
+    font-size: 16px;
+    line-height: 1.5;
+    color: #fff;
+}
+
 h2{
     font-family: "Black";
     font-size: 40px;
@@ -3054,6 +3084,7 @@ textarea {
 
     .z-index{
         margin-top: 30px;
+        align-items: center;
     }
     .button-container{
         display: flex;
@@ -3824,6 +3855,35 @@ textarea {
         font-size: 16px;
         margin-top: 20px !important;
         margin-bottom: 78px;
+    }
+
+    .day-tour-h1{
+        font-size: 30px !important;
+    }
+
+    .day-tour-h2{
+        font-size: 18px !important;
+        padding: 0px 20px;
+    }
+
+    .day-tour-included{
+        flex-direction: column;
+        align-items: center;
+        gap: 4px;
+    }
+
+    .day-tours-included-container{
+        margin-top: 32px;
+        margin-bottom: 72px;
+        gap: 16px;
+    }
+
+    .day-tour-hero{
+        max-height: none;
+    }
+
+    .day-tour-button{
+        width: 60vw;
     }
 
 }
