--- a/style.css
+++ b/style.css
@@ -191,6 +191,16 @@ header svg{
 
 .menu li{
     margin-top: 8px;
+    opacity: 0.7;
+
+}
+
+.menu-active{
+    opacity: 1.0 !important;
+}
+
+.menu li:hover{
+    opacity: 1.0 !important;
 }
 
 .menu button{
@@ -2897,6 +2907,7 @@ textarea {
     .menu li{
         margin: 0px;
         background-color: #F5F5F5;
+        transition: transform 0.3s ease;
     }
 
     .menu li:nth-last-child(1){
