--- a/style.css
+++ b/style.css
@@ -1207,6 +1207,11 @@ body{
     background-color: #2A2E28;
 }
 
+.about-hero{
+    background-color: #f5f5f5 !important;
+    color: #1D1F1C !important;
+}
+
 .hero-left img, .hero-left-back img{
     position: absolute;
     background: url('img/hero-back.png') no-repeat center center;
@@ -3901,9 +3906,7 @@ textarea {
         max-height: none;
     }
 
-    .about-hero{
-        background-color: #f5f5f5 !important;
-    }
+
 
     .day-tour-button{
         width: 60vw;
